# key-viewer

./: .gitignore  Cargo.toml  README.md  config.toml  output.txt  output.txt_  output_save.txt
src/: config_manager.rs  error_type.rs  key_manager.rs  key_reader.rs  lib.rs  logger.rs  logs.rs  main.rs  ui_manager.rs
src/config_manager/: config_type.rs
src/key_manager/: evdev_x11_tools.rs  key_types.rs  keystate_memory.rs
src/logs/: log_manager.rs  log_types.rs  logger.rs
src/ui_manager/: app.rs  bar_graph_keys_widget.rs  event.rs  handler.rs  keyboard_widget.rs  layer_choice_widget.rs  show_info_widget.rs  tab_manager.rs  tabs.rs  tui.rs  types.rs  ui.rs  widgets.rs
src/ui_manager/tabs/: layer_tab.rs  one_key_tab.rs
src/ui_manager/types/: physical_layout_type.rs
src/ui_manager/widgets/: bar_graph_keys_widget.rs  bar_keys_horiz_widget.rs  keyboard_widget.rs  layer_choice_widget.rs  one_key_info_widget.rs  show_info_widget.rs  tab_list_widget.rs
