[package]
name = "key_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
# [[bin]]
# name = "deamon"
# path = "src/main.rs"

[dependencies]
evdev = "0.12.1"
xkbcommon = { version = "0.6", features = ["x11"] }
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.23.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.8.8"
chrono = "0.4.33"
